force-app/main/default/objects/Phones__c/Phones__c.object-meta.xml
<CustomObject>
    <label>Phone</label>
    <nameField>
        <label>Phone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>