force-app/main/default/objects/Phones__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iPhone 5/SE</fullName>
            </value>
            <value>
                <fullName>iPhone 6/6s</fullName>
            </value>
            <value>
                <fullName>iPhone 7</fullName>
            </value>
            <value>
                <fullName>iPhone 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>